# xournal

./: .gitignore  .gitmodules  CMakeLists.txt  README  configure.in  xournal.glade
libscribble/: CMakeLists.txt  scribble.cpp  scribble.h  scribble_test.cpp
src/: CMakeLists.txt  LeNet-weights  Makefile.am  xo-callbacks.c  xo-callbacks.h  xo-file.c  xo-interface.c  xo-misc.c  xo-paint.c  xo-scribble.c  xo-scribble.h  xo-shapes.c  xournal.h
